# chat-genius-backend

./: .gitignore  docker-compose.yml  init-db.sh  package-lock.json  package.json  schema.sql  tsconfig.json
ocaml/: chat_genius.opam  dune-project
ocaml/lib/: db.ml  db.mli  dune  types.ml  websocket_manager.ml  websocket_types.ml
src/: createAdmin.ts  server.ts
src/config/: config.ts
src/controllers/: channel.controller.ts  file.controller.ts  message.controller.ts  rag.controller.ts  user.controller.ts
src/middleware/: auth.middleware.ts
src/services/: moondream.service.ts  pinecone.service.ts  rag-fusion.service.ts
src/types/: auth.types.ts  rag.types.ts  websocket.types.ts
src/websocket/: websocket.manager.ts
src/websocket/handlers/: message.handler.ts  productivity.handler.ts  user.handler.ts
