(lang dune 3.0)
(name chat_genius)
(version 0.1.0)

(generate_opam_files true)

(package
 (name chat_genius)
 (synopsis "Chat Genius Backend in OCaml")
 (description "A real-time chat application backend with WebSocket support")
 (depends
  (ocaml (>= 4.14.0))
  (dune (>= 3.0))
  dream
  (pgx (>= 2.1))
  (pgx_value_core (>= 2.1))
  (pgx_lwt_unix (>= 2.1))
  (ppx_deriving (>= 5.2.1))
  (ppx_deriving_yojson (>= 3.6.1))
  (yojson (>= 2.0.0))
  (lwt (>= 5.6.1))
  (cryptokit (>= 1.16))
  (jwto (>= 0.4.0)))) 