(lang dune 3.12)

(name chat_genius)

(generate_opam_files true)

(source
 (github username/chat_genius))

(authors "Noah Peterson")

(maintainers "Noah Peterson")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name chat_genius)
 (synopsis "A chat application")
 (description "A chat application with channels and threads")
 (depends 
  ocaml 
  dune 
  dream 
  yojson 
  ppx_deriving_yojson 
  pgx 
  pgx_lwt_unix 
  cryptokit 
  jwto
  aws-s3-lwt))

(using menhir 2.1) 