(library
 (name chat_genius_lib)
 (public_name chat_genius.lib)
 (modules types websocket_types db websocket_manager)
 (libraries
  dream
  pgx
  pgx_value_core
  pgx_lwt_unix
  yojson
  ppx_deriving_yojson.runtime
  cryptokit
  lwt.unix
  lwt_ppx
  jwto)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_yojson lwt_ppx))) 